# PropensityBatchRandomization

./: README.md  pyproject.toml
propensitybatchrandomization/: __init__.py  propensityScore.py  randomAssignment.py
src/: propensityScore.py  randomAssignment.py
tutorial/: README.md  example_data.csv  tutorial.md  tutorial_code.py
